apps/web_fintech/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fintech-ingress
  namespace: fintech
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.fintech.nefyo.com
        - fintech.nefyo.com
      secretName: fintech-cert-secret
  rules:
    - host: api.fintech.nefyo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fintech-backend-service
                port:
                  number: 3002
    - host: fintech.nefyo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fintech-frontend-service
                port:
                  number: 3000
